2007-11-22  Bernhard Walle <bernhard.walle@gmx.de>

	* fixed and tested GUI on Win32

2007-11-21  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented GUI (tested on Linux)

2007-11-18  Bernhard Walle <bernhard.walle@gmx.de>

	* created installer (based on installer for the USBprog GUI)
	* added resource file to get an application icon on MS Windows

2007-11-17  Bernhard Walle <bernhard.walle@gmx.de>

	* Win32 port.
	* replace strptime() by snprintf() for Win32
	* reset fill character to ' ' in the "devices" and "list" command
	  to fix the "pin" command
	* make the output of the "devices" command 2 lines for each device
	  because the device "number" is much longer on Win32 than on Linux
	* various other small improvements
	* make "pins" an alias for "pin"
	* make 'x' and 'q' an alias for "quit" (mostly for Windows where
	  Ctrl-d doesn't work)

2007-11-16  Bernhard Walle <bernhard.walle@gmx.de>

	* added README, INSTALL, NEWS and COPYING
	* remove superfluous usbprog/usbprog.cc file (which was only there for
	  testing)
	* always print the current update device (*) in the "devices" command,
	  not only if there are more than 1 update devices
	* run DeviceManager::discoverUpdateDevices() in the "devices" command
	  instead of printing an error message when zero update devices are
	  currently registered