@@ -52,7 +52,8 @@ bool internetConnection = true;
 /* -------------------------------------------------------------------------- */
 BEGIN_EVENT_TABLE(usbprogFrm,wxFrame)
 	EVT_CLOSE(usbprogFrm::OnClose)
-    EVT_BUTTON(ID_QUIT_BUTTON,          usbprogFrm::quitButtonHandler)
+    EVT_MENU(ID_EXIT_MENU,              usbprogFrm::exitMenuHandler)
+    EVT_MENU(ID_ABOUT_MENU,             usbprogFrm::aboutMenuHandler)
     EVT_COMBOBOX(ID_DEVICECOMBO,        usbprogFrm::deviceComboHandler)
     EVT_BUTTON(ID_REFRESH_DEV_BUTTON,   usbprogFrm::deviceRefreshHandler)
     EVT_BUTTON(ID_REFRESH_POOL_BUTTON,  usbprogFrm::firmwareRefreshHandler)
@@ -106,7 +107,8 @@ void GUIProgressNotifier::finished()
 /* -------------------------------------------------------------------------- */
 usbprogFrm::usbprogFrm(wxWindow *parent, wxWindowID id, const wxString &title,
 		const wxPoint &position, const wxSize& size)
-    : wxFrame(parent, id, title, position, size), m_deviceManager(NULL),
+    : wxFrame(parent, id, title, position, size,
+            wxDEFAULT_FRAME_STYLE & ~wxRESIZE_BORDER), m_deviceManager(NULL),
       m_firmwarepool(NULL)
 
 {
@@ -120,8 +122,8 @@ usbprogFrm::usbprogFrm(wxWindow *parent, wxWindowID id, const wxString &title,
     firmwareRefreshHandler(evt);
     deviceRefreshHandler(evt);
 
-    // set size again, the size of the combo box may have changed
     GetSizer()->SetSizeHints(this);
+    m_topBox->SetSizeHints(m_panel);
 }
 
 /* -------------------------------------------------------------------------- */
@@ -134,132 +136,128 @@ usbprogFrm::~usbprogFrm()
 /* -------------------------------------------------------------------------- */
 void usbprogFrm::CreateGUIControls()
 {
-	SetTitle(wxT("USBprog GUI " USBPROG_VERSION_STRING));
 	SetIcon(usbprog_icon_xpm);
 
-    wxPanel *panel = new wxPanel(this, wxID_ANY);
+    // status messages
+    CreateStatusBar();
 
-    wxBoxSizer *topBox = new wxBoxSizer(wxHORIZONTAL);
+    // menu
+    wxMenu *fileMenu = new wxMenu;
+    wxMenu *helpMenu = new wxMenu;
+    fileMenu->Append(ID_EXIT_MENU, wxT("E&xit\tCtrl-q"),
+            wxT("Quit this program"));
+    helpMenu->Append(ID_ABOUT_MENU, wxT("&About\tF1"),
+            wxT("Show version information"));
+
+    wxMenuBar *menuBar = new wxMenuBar();
+    menuBar->Append(fileMenu, wxT("&Program"));
+    menuBar->Append(helpMenu, wxT("&Help"));
+
+    SetMenuBar(menuBar);
+
+    // panel for the main GUI
+    m_panel = new wxPanel(this, wxID_ANY);
+
+    m_topBox = new wxBoxSizer(wxHORIZONTAL);
     wxGridBagSizer *topSizer = new wxGridBagSizer;
     wxBoxSizer *frameSizer = new wxBoxSizer(wxHORIZONTAL);
 
     // logo on the left
-	m_logoBitmap = new wxStaticBitmap(panel, ID_LOGOBITMAP,
+	m_logoBitmap = new wxStaticBitmap(m_panel, ID_LOGOBITMAP,
             wxBitmap(usbprog_xpm));
 	m_logoBitmap->Enable(true);
-    topSizer->Add(m_logoBitmap, wxGBPosition(0, 0), wxGBSpan(7, 1),
+    topSizer->Add(m_logoBitmap, wxGBPosition(0, 0), wxGBSpan(5, 1),
             wxRIGHT, 10);
 
     // device label
-    m_deviceLabel = new wxStaticText(panel, ID_DEVICELABEL, wxT("Device"));
+    m_deviceLabel = new wxStaticText(m_panel, ID_DEVICELABEL, wxT("Device"));
     topSizer->Add(m_deviceLabel, wxGBPosition(0, 1), wxGBSpan(),
             wxALIGN_CENTER_VERTICAL);
 
     // device combo box
-    m_deviceCombo = new wxComboBox(panel, ID_DEVICECOMBO, wxT(""),
+    m_deviceCombo = new wxComboBox(m_panel, ID_DEVICECOMBO, wxT(""),
             wxDefaultPosition, wxDefaultSize, 0, NULL, wxCB_READONLY);
+    wxSize sz = m_deviceCombo->GetMinSize();
+    sz.SetWidth(200);
+    m_deviceCombo->SetMinSize(sz);
     topSizer->Add(m_deviceCombo, wxGBPosition(0, 2), wxGBSpan(),
             wxLEFT|wxRIGHT | wxALIGN_CENTER_VERTICAL, 5);
+    // topSizer->SetItemMinSize(m_deviceCombo, 50, 0);
 
     // refresh devices button
-    m_refreshDevButton = new wxButton(panel, ID_REFRESH_DEV_BUTTON,
+    m_refreshDevButton = new wxButton(m_panel, ID_REFRESH_DEV_BUTTON,
             wxT("&Refresh"));
     topSizer->Add(m_refreshDevButton, wxGBPosition(0, 3), wxGBSpan(),
-            wxALIGN_RIGHT);
+            wxALIGN_RIGHT | wxALIGN_CENTER_VERTICAL);
 
     // device info text
-    m_devInfo = new wxStaticText(panel, ID_DEV_INFO, wxT("No device selected"));
+    m_devInfo = new wxStaticText(m_panel, ID_DEV_INFO, wxT("No device selected"));
     topSizer->Add(m_devInfo, wxGBPosition(1, 2), wxGBSpan(),
-            wxLEFT|wxRIGHT | wxALIGN_CENTER_VERTICAL, 5);
+            wxLEFT|wxRIGHT | wxALIGN_TOP, 5);
 
     // online radio button
-    m_onlineRB = new wxRadioButton(panel, ID_ONLINE_RB, wxT("&Online Pool"));
+    m_onlineRB = new wxRadioButton(m_panel, ID_ONLINE_RB, wxT("&Online Pool"));
     m_onlineRB->SetValue(true);
     topSizer->Add(m_onlineRB, wxGBPosition(2, 1), wxGBSpan(),
             wxALIGN_CENTER_VERTICAL);
 
     // pool combo box
-    m_poolCombo = new wxComboBox(panel, ID_POOL_COMBO, wxT(""),
+    m_poolCombo = new wxComboBox(m_panel, ID_POOL_COMBO, wxT(""),
             wxDefaultPosition, wxDefaultSize, 0, NULL, wxCB_READONLY);
+    sz = m_poolCombo->GetMinSize();
+    sz.SetWidth(200);
+    m_poolCombo->SetMinSize(sz);
     topSizer->Add(m_poolCombo, wxGBPosition(2, 2), wxGBSpan(),
             wxTOP|wxBOTTOM|wxLEFT|wxRIGHT | wxALIGN_CENTER_VERTICAL, 5);
+    // topSizer->SetItemMinSize(m_poolCombo, 50, 0);
 
     // pool refresh
-    m_refreshPoolButton = new wxButton(panel, ID_REFRESH_POOL_BUTTON,
+    m_refreshPoolButton = new wxButton(m_panel, ID_REFRESH_POOL_BUTTON,
             wxT("R&efresh"));
     topSizer->Add(m_refreshPoolButton, wxGBPosition(2, 3), wxGBSpan(),
-            wxALIGN_RIGHT);
+            wxALIGN_RIGHT | wxALIGN_CENTER_VERTICAL);
 
     // local disk radio button
-    m_localRB = new wxRadioButton(panel, ID_LOCAL_RB, wxT("&Local disk"));
+    m_localRB = new wxRadioButton(m_panel, ID_LOCAL_RB, wxT("&Local disk"));
     topSizer->Add(m_localRB, wxGBPosition(3, 1), wxGBSpan(),
             wxALIGN_CENTER_VERTICAL);
 
-    // pool combo box
-    m_pathText = new wxTextCtrl(panel, ID_PATH_TEXT, wxT(""));
+    // path text
+    m_pathText = new wxTextCtrl(m_panel, ID_PATH_TEXT, wxT(""));
     m_pathText->Enable(false);
+    sz = m_pathText->GetMinSize();
+    sz.SetWidth(200);
+    m_pathText->SetMinSize(sz);
     topSizer->Add(m_pathText, wxGBPosition(3, 2), wxGBSpan(),
-            wxTOP|wxBOTTOM|wxLEFT|wxRIGHT | wxALIGN_CENTER_VERTICAL |
-            wxEXPAND, 5);
+            wxTOP|wxBOTTOM|wxLEFT|wxRIGHT | wxALIGN_CENTER_VERTICAL, 5);
 
     // pool refresh
-    m_browseButton = new wxButton(panel, ID_BROWSE_BUTTON,
+    m_browseButton = new wxButton(m_panel, ID_BROWSE_BUTTON,
             wxT("&Browse"));
     m_browseButton->Enable(false);
-    topSizer->Add(m_browseButton, wxGBPosition(3, 3), wxGBSpan(), wxALIGN_RIGHT);
+    topSizer->Add(m_browseButton, wxGBPosition(3, 3), wxGBSpan(),
+            wxALIGN_RIGHT | wxALIGN_CENTER_VERTICAL);
 
     // upload button
-    m_uploadButton = new wxButton(panel, ID_UPLOAD_BUTTON, wxT("U&pload"));
+    m_uploadButton = new wxButton(m_panel, ID_UPLOAD_BUTTON, wxT("U&pload"));
     topSizer->Add(m_uploadButton, wxGBPosition(4, 3), wxGBSpan(),
-            wxALIGN_RIGHT);
-
-    // quit button
-    m_quitButton = new wxButton(panel, ID_QUIT_BUTTON, wxT("&Quit"));
-    topSizer->Add(m_quitButton, wxGBPosition(4, 2), wxGBSpan(),
-            wxALIGN_RIGHT);
-
-    // progress text
-    m_progressLabel = new wxStaticText(panel, ID_PROCESS_LABEL, wxT("Progress:"));
-    topSizer->Add(m_progressLabel, wxGBPosition(5, 1), wxGBSpan(),
-            wxALIGN_CENTER_VERTICAL);
+            wxALIGN_RIGHT | wxALIGN_CENTER_VERTICAL);
 
     // progress bar
-    m_progressGauge = new wxGauge(panel, ID_PROCESS_GAUGE, 100, wxDefaultPosition,
+    m_progressGauge = new wxGauge(m_panel, ID_PROCESS_GAUGE, 100, wxDefaultPosition,
             wxSize(2, 2));
-    topSizer->Add(m_progressGauge, wxGBPosition(5, 2), wxGBSpan(1, 2),
+    topSizer->Add(m_progressGauge, wxGBPosition(5, 1), wxGBSpan(1, 3),
             wxTOP|wxBOTTOM|wxLEFT| wxALIGN_CENTER_VERTICAL |
             wxEXPAND, 5);
-
-    // status label
-    m_statusLabel = new wxStaticText(panel, ID_STATUS_LABEL, wxT("Status"));
-    topSizer->Add(m_statusLabel, wxGBPosition(6, 1), wxGBSpan(),
-            wxALIGN_CENTER_VERTICAL);
-
-    // status text
-    m_statusText = new wxTextCtrl(panel, ID_STATUS_TEXT, wxT(""),
-            wxDefaultPosition, wxDefaultSize, wxTE_READONLY);
-    topSizer->Add(m_statusText, wxGBPosition(6, 2), wxGBSpan(1, 2),
-            wxTOP|wxBOTTOM|wxLEFT| wxALIGN_CENTER_VERTICAL |
-            wxEXPAND, 5);
-
-    // copyright mark
-    m_copyrightLabel = new wxStaticText(panel, ID_COPYRIGHT_LABEL,
-            wxT("(c) 2007, Bernhard Walle <bernhard.walle@gmx.de>\n"
-                "http://www.embedded-projects.net/usbprog"));
-    topSizer->Add(m_copyrightLabel, wxGBPosition(7, 1), wxGBSpan(1, 3),
-            wxTOP|wxBOTTOM, 5);
 
     // file dialog
-	m_fileDialog = new wxFileDialog(panel, wxT("Choose a file"),
+	m_fileDialog = new wxFileDialog(m_panel, wxT("Choose a file"),
             wxT(""), wxT(""), wxT("*.bin"), wxOPEN);
 
+    m_topBox->Add(topSizer, wxEXPAND, wxALL, 10);
 
-    topBox->Add(topSizer, wxEXPAND, wxALL, 10);
-    topBox->SetSizeHints(panel);
-
-    frameSizer->Add(topBox, wxEXPAND);
+    frameSizer->Add(m_topBox, wxEXPAND);
     SetSizer(frameSizer);
-    frameSizer->SetSizeHints(this);
 }
 
 /* -------------------------------------------------------------------------- */
@@ -291,9 +289,21 @@ void usbprogFrm::poolRadioHandler(wxCommandEvent& evt)
 }
 
 /* -------------------------------------------------------------------------- */
-void usbprogFrm::quitButtonHandler(wxCommandEvent& event)
+void usbprogFrm::exitMenuHandler(wxCommandEvent& event)
 {
 	Destroy();
+}
+
+/* -------------------------------------------------------------------------- */
+void usbprogFrm::aboutMenuHandler(wxCommandEvent &evt)
+{
+    wxMessageDialog dlg(this,
+            wxT("USBprog " USBPROG_VERSION_STRING "\n"
+                "(c) 2007, Bernhard Walle <bernhard.walle@gmx.de>\n"
+                "http://www.embedded-projects.net/usbprog"),
+            wxT("About ..."),
+            wxOK | wxICON_INFORMATION);
+    dlg.ShowModal();
 }
 
 /* -------------------------------------------------------------------------- */
@@ -371,7 +381,7 @@ Device *usbprogFrm::getSelectedDevice()
 /* -------------------------------------------------------------------------- */
 Firmware *usbprogFrm::getSelectedFirmware()
 {
-    string value = (const char *)m_poolCombo->GetValue().fn_str();
+    string value = (const char *)m_poolCombo->GetValue().mb_str();
 
     Firmware *found = NULL;
     vector<Firmware *> fws = m_firmwarepool->getFirmwareList();
@@ -414,21 +424,21 @@ void usbprogFrm::firmwareRefreshHandler(wxCommandEvent &evt)
 /* -------------------------------------------------------------------------- */
 void usbprogFrm::status(const char *text)
 {
-	m_statusText->Clear();
-	m_statusText->WriteText(wxString(text, wxConvUTF8));
-    wxGetApp().Yield();
+     status(string(text));
 }
 
 /* -------------------------------------------------------------------------- */
 void usbprogFrm::status(const string &text)
 {
-    status(text.c_str());
+    SetStatusText(WXSTRING(text));
+    wxGetApp().Yield();
 }
 
 /* -------------------------------------------------------------------------- */
 void usbprogFrm::uploadHandler(wxCommandEvent &evt)
 {
     ByteVector data;
+    wxBusyCursor cursor;
 
     if (m_onlineRB->GetValue()) {
         Firmware *fw = getSelectedFirmware();
@@ -512,6 +522,7 @@ void usbprogFrm::uploadHandler(wxCommandEvent &evt)
         upd.updateClose();
     } catch (const IOError &err) {
         status(string("Error while uploading firmware: ") + err.what());
+        return;
     }
 
     status("Upload successful!");
